--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 const arquivo = arquivoInput.files[0];
                 const formData = new FormData();
                 formData.append('arquivo', arquivo);
-                fetch('<?php echo $_SERVER['PHP_SELF']; ?>', {
+                fetch('upload.php', {
                     method: 'POST',
                     body: formData
                 })
@@ -57,7 +57,7 @@
         });
 
         downloadButton.addEventListener('click', () => {
-            fetch('<?php echo $_SERVER['PHP_SELF']; ?>', {
+            fetch('upload.php', {
                 method: 'GET'
             })
             .then(response => response.blob())
@@ -71,85 +71,7 @@
             .catch(error => console.error(error));
         });
 
-        const calcularButton = document.getElementById('calcular');
-        const nomeInput = document.getElementById('nome');
-        const tentativasInput = document.getElementById('tentativas');
-        const acertosInput = document.getElementById('acertos');
-        const acertosResultadoElement = document.getElementById('acertos-resultado');
-        const errosResultadoElement = document.getElementById('erros-resultado');
-        const historicoElement = document.getElementById('historico-texto');
-
-        let historico = [];
-
-        calcularButton.addEventListener('click', (e) => {
-            e.preventDefault();
-            const nome = nomeInput.value;
-            const tentativas = parseInt(tentativasInput.value);
-            const acertos = parseInt(acertosInput.value);
-            if (acertos > tentativas) {
-                alert("O número de acertos não pode ser maior que o número de tentativas.");
-                return;
-            }
-            const erros = tentativas - acertos;
-            const acertosPorcentagem = (acertos / tentativas) * 100;
-            const errosPorcentagem = (erros / tentativas) * 100;
-
-            acertosResultadoElement.textContent = `Acertos: ${acertos} (${acertosPorcentagem.toFixed(2)}%)`;
-            errosResultadoElement.textContent = `Erros: ${erros} (${errosPorcentagem.toFixed(2)}%)`;
-
-            historico.push({
-                nome,
-                tentativas,
-                acertos,
-                erros,
-                acertosPorcentagem,
-                errosPorcentagem
-            });
-
-            historicoElement.innerHTML = '';
-            historico.forEach((item) => {
-                const paragraph = document.createElement('p');
-                paragraph.textContent = `${item.nome} - ${item.acertosPorcentagem.toFixed(2)}% acertos, ${item.errosPorcentagem.toFixed(2)}% erros`;
-                historicoElement.appendChild(paragraph);
-            });
-        });
-
-    <?php
-// Verificar se o formulário de upload foi submetido
-if ($_SERVER['REQUEST_METHOD'] == 'POST') {
-    // Verificar se o arquivo foi enviado
-    if (isset($_FILES['arquivo'])) {
-        $arquivo = $_FILES['arquivo'];
-        // Verificar se o arquivo é válido
-        if ($arquivo['error'] == 0) {
-            // Salvar o arquivo no servidor
-            $nome_arquivo = $arquivo['name'];
-            $tipo_arquivo = $arquivo['type'];
-            $tamanho_arquivo = $arquivo['size'];
-            $tmp_arquivo = $arquivo['tmp_name'];
-            $destino_arquivo = 'uploads/' . $nome_arquivo;
-            move_uploaded_file($tmp_arquivo, $destino_arquivo);
-            // Retornar uma mensagem de sucesso
-            echo json_encode(['mensagem' => 'Arquivo uploaded com sucesso!']);
-        } else {
-            // Retornar uma mensagem de erro
-            echo json_encode(['mensagem' => 'Erro ao upload do arquivo!']);
-        }
-    }
-} elseif ($_SERVER['REQUEST_METHOD'] == 'GET') {
-    // Verificar se o arquivo existe no servidor
-    $arquivo = 'arquivo.txt';
-    if (file_exists($arquivo)) {
-        // Enviar o arquivo para download
-        header('Content-Type: application/octet-stream');
-        header('Content-Disposition: attachment; filename="' . $arquivo . '"');
-        readfile($arquivo);
-    } else {
-        // Retornar uma mensagem de erro
-        echo json_encode(['mensagem' => 'Arquivo não encontrado!']);
-    }
-}
-?>
+        // ...
     </script>
 </body>
 </html>
