--- a/index.html
+++ b/index.html
@@ -122,6 +122,48 @@
             })
             .catch(error => console.error(error));
         });
+const calcularButton = document.getElementById('calcular');
+const nomeInput = document.getElementById('nome');
+const tentativasInput = document.getElementById('tentativas');
+const acertosInput = document.getElementById('acertos');
+const acertosResultadoElement = document.getElementById('acertos-resultado');
+const errosResultadoElement = document.getElementById('erros-resultado');
+const historicoElement = document.getElementById('historico-texto');
+
+let historico = [];
+
+calcularButton.addEventListener('click', (e) => {
+    e.preventDefault();
+    const nome = nomeInput.value;
+    const tentativas = parseInt(tentativasInput.value);
+    const acertos = parseInt(acertosInput.value);
+    if (acertos > tentativas) {
+        alert("O número de acertos não pode ser maior que o número de tentativas.");
+        return;
+    }
+    const erros = tentativas - acertos;
+    const acertosPorcentagem = (acertos / tentativas) * 100;
+    const errosPorcentagem = (erros / tentativas) * 100;
+
+    acertosResultadoElement.textContent = `Acertos: ${acertos} (${acertosPorcentagem.toFixed(2)}%)`;
+    errosResultadoElement.textContent = `Erros: ${erros} (${errosPorcentagem.toFixed(2)}%)`;
+
+    historico.push({
+        nome,
+        tentativas,
+        acertos,
+        erros,
+        acertosPorcentagem,
+        errosPorcentagem
+    });
+
+    historicoElement.innerHTML = '';
+    historico.forEach((item) => {
+        const paragraph = document.createElement('p');
+        paragraph.textContent = `${item.nome} - ${item.acertosPorcentagem.toFixed(2)}% acertos, ${item.errosPorcentagem.toFixed(2)}% erros`;
+        historicoElement.appendChild(paragraph);
+    });
+});
 
         // ...
     </script>
