--- a/index.html
+++ b/index.html
@@ -10,40 +10,150 @@
             margin: 0;
             padding: 0;
         }
+
         .header {
             background-color: #333;
             color: #fff;
-            padding: 20px;
+            padding: 1rem;
             text-align: center;
         }
-        .button {
+
+        .header h1 {
+            margin: 0;
+        }
+
+        .mode-button {
+            position: absolute;
+            top: 80px;
+            right: 150px;
             background-color: #444;
             color: #fff;
             border: none;
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
             cursor: pointer;
         }
-        .button:hover {
+
+        .mode-button:hover {
             background-color: #555;
         }
-        .calculator {
+  .Robocep-button {
+            position: absolute;
+            top: 80px;
+            right: 350px;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .Robocep-button:hover {
+            background-color: #555;
+        }
+          .Robocep-button i {
+            margin-right: 0.5rem;
+        }
+
+        .instagram-button {
+            position: absolute;
+            top: 80px;
+            right: 10px;
+            background-color: #444;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .instagram-button:hover {
+            background-color: #444;
+        }
+
+        .instagram-button i {
+            margin-right: 0.5rem;
+        }
+
+        .container {
             max-width: 400px;
-            margin: 40px auto;
-            padding: 20px;
+            margin: 2rem auto;
+            padding: 2rem;
             background-color: #f9f9f9;
             border: 1px solid #ddd;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
+        .label {
+            display: block;
+            margin-bottom: 0.5rem;
+        }
+
+        .input {
+            padding: 0.5rem;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+        }
+
+        .button {
+            background-color: #333;
+            color: #fff;
+            border: none;
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .button:hover {
+            background-color: #444;
+        }
+
+        .result {
+            margin-top: 2rem;
+        }
+
+        .result p {
+            margin-bottom: 0.5rem;
+        }
+
+        .historico {
+            margin-top: 2rem;
+        }
+
+        .historico p {
+            margin-bottom: 0.5rem;
+        }
+
         .dark-mode {
             background-color: #333;
             color: #fff;
         }
+
         .dark-mode .header {
             background-color: #444;
         }
+
+        .dark-mode .container {
+            background-color: #333;
+        }
+
+        .dark-mode .label {
+            color: #fff;
+        }
+
+        .dark-mode .input {
+            background-color: #444;
+            color: #fff;
+        }
+
         .dark-mode .button {
             background-color: #555;
+            color: #fff;
+        }
+
+        .dark-mode .result {
+            background-color: #333;
             color: #fff;
         }
     </style>
@@ -56,25 +166,28 @@
     <button class="instagram-button" id="instagram-button" onclick="window.open('https://www.instagram.com/bots_robocep/', '_blank')">
       <i class="fa-brands fa-instagram"></i> Instagram
     </button>
-    <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')">
-      <i class="fa-solid fa-robot"></i> Robocep
-    </button>
-    <button class="upload-button" id="upload-button">Upload de Arquivo</button>
-    <button class="download-button" id="download-button">Download de Arquivo</button>
-    <div class="calculator">
-        <h2>Calculadora de Acertos</h2>
+    <button class="Robocep-button" id="Robocep-button" onclick="window.open('https://robocep.pythonanywhere.com/', '_blank')"></button>
+    <div class="container">
         <form>
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome"><br><br>
-            <label for="tentativas">Tentativas:</label>
-            <input type="number" id="tentativas" name="tentativas"><br><br>
-            <label for="acertos">Acertos:</label>
-            <input type="number" id="acertos" name="acertos"><br><br>
-            <button id="calcular">Calcular</button>
+            <label class="label" for="nome">Nome:</label>
+            <input class="input" type="text" id="nome" required>
+            <br><br>
+            <label class="label" for="tentativas">Tentativas:</label>
+            <input class="input" type="number" id="tentativas" required>
+            <br><br>
+            <label class="label" for="acertos">Acertos:</label>
+            <input class="input" type="number" id="acertos" required>
+            <div class="button-container">
+                <button class="button" id="calcular">Calcular</button>
+            </div>
         </form>
-        <div id="acertos-resultado"></div>
-        <div id="erros-resultado"></div>
-        <div id="historico-texto"></div>
+        <div class="result" id="result">
+            <p id="acertos-resultado"><//p>
+            <p id="erros-resultado"></p>
+        </div>
+        <div class="historico" id="historico">
+            <div id="historico-texto"></div>
+        </div>
     </div>
 
     <script>
@@ -86,86 +199,48 @@
             modeButton.textContent = body.classList.contains('dark-mode') ? 'Modo Claro' : 'Modo Escuro';
         });
 
-        const uploadButton = document.getElementById('upload-button');
-        const downloadButton = document.getElementById('download-button');
+        const calcularButton = document.getElementById('calcular');
+        const nomeInput = document.getElementById('nome');
+        const tentativasInput = document.getElementById('tentativas');
+        const acertosInput = document.getElementById('acertos');
+        const acertosResultadoElement = document.getElementById('acertos-resultado');
+        const errosResultadoElement = document.getElementById('erros-resultado');
+        const historicoElement = document.getElementById('historico-texto');
 
-        uploadButton.addEventListener('click', () => {
-            const arquivoInput = document.createElement('input');
-            arquivoInput.type = 'file';
-            arquivoInput.accept = '.txt, .csv';
-            arquivoInput.addEventListener('change', (e) => {
-                const arquivo = arquivoInput.files[0];
-                const formData = new FormData();
-                formData.append('arquivo', arquivo);
-                fetch('<?php echo $_SERVER['PHP_SELF']; ?>', {
-                    method: 'POST',
-                    body: formData
-                })
-                .then(response => response.json())
-                .then(data => console.log(data))
-                .catch(error => console.error(error));
+        let historico = [];
+
+        calcularButton.addEventListener('click', (e) => {
+            e.preventDefault();
+            const nome = nomeInput.value;
+            const tentativas = parseInt(tentativasInput.value);
+            const acertos = parseInt(acertosInput.value);
+             if (acertos > tentativas) {
+            alert("O número de acertos não pode ser maior que o número de tentativas.");
+            return;
+             }
+            const erros = tentativas - acertos;
+            const acertosPorcentagem = (acertos / tentativas) * 100;
+            const errosPorcentagem = (erros / tentativas) * 100;
+
+            acertosResultadoElement.textContent = `Acertos: ${acertos} (${acertosPorcentagem.toFixed(2)}%)`;
+            errosResultadoElement.textContent = `Erros: ${erros} (${errosPorcentagem.toFixed(2)}%)`;
+
+             historico.push({
+                nome,
+                tentativas,
+                acertos,
+                erros,
+                acertosPorcentagem,
+                errosPorcentagem
             });
-            arquivoInput.click();
+
+            historicoElement.innerHTML = '';
+            historico.forEach((item) => {
+                const paragraph = document.createElement('p');
+                paragraph.textContent = `${item.nome} - ${item.acertosPorcentagem.toFixed(2)}% acertos, ${item.errosPorcentagem.toFixed(2)}% erros`;
+                historicoElement.appendChild(paragraph);
+            });
         });
-
-        downloadButton.addEventListener('click', () => {
-            fetch('<?php echo $_SERVER['PHP_SELF']; ?>', {
-                method: 'GET'
-            })
-            .then(response => response.blob())
-            .then(blob => {
-                const url = URL.createObjectURL(blob);
-                const a = document.createElement('a');
-                a.href = url;
-                a.download = 'arquivo.txt'; // Nome do arquivo para download
-                a.click();
-            })
-            .catch(error => console.error(error));
-        });
-const calcularButton = document.getElementById('calcular');
-const nomeInput = document.getElementById('nome');
-const tentativasInput = document.getElementById('tentativas');
-const acertosInput = document.getElementById('acertos');
-const acertosResultadoElement = document.getElementById('acertos-resultado');
-const errosResultadoElement = document.getElementById('erros-resultado');
-const historicoElement = document.getElementById('historico-texto');
-
-let historico = [];
-
-calcularButton.addEventListener('click', (e) => {
-    e.preventDefault();
-    const nome = nomeInput.value;
-    const tentativas = parseInt(tentativasInput.value);
-    const acertos = parseInt(acertosInput.value);
-    if (acertos > tentativas) {
-        alert("O número de acertos não pode ser maior que o número de tentativas.");
-        return;
-    }
-    const erros = tentativas - acertos;
-    const acertosPorcentagem = (acertos / tentativas) * 100;
-    const errosPorcentagem = (erros / tentativas) * 100;
-
-    acertosResultadoElement.textContent = `Acertos: ${acertos} (${acertosPorcentagem.toFixed(2)}%)`;
-    errosResultadoElement.textContent = `Erros: ${erros} (${errosPorcentagem.toFixed(2)}%)`;
-
-    historico.push({
-        nome,
-        tentativas,
-        acertos,
-        erros,
-        acertosPorcentagem,
-        errosPorcentagem
-    });
-
-    historicoElement.innerHTML = '';
-    historico.forEach((item) => {
-        const paragraph = document.createElement('p');
-        paragraph.textContent = `${item.nome} - ${item.acertosPorcentagem.toFixed(2)}% acertos, ${item.errosPorcentagem.toFixed(2)}% erros`;
-        historicoElement.appendChild(paragraph);
-    });
-});
-
-        // ...
     </script>
 </body>
 </html>
